--- a/app/src/main/res/layout/activity_my_store.xml
+++ b/app/src/main/res/layout/activity_my_store.xml
@@ -16,6 +16,7 @@
         <include
             layout="@layout/title" ></include>
         <com.zthx.npj.view.MyCircleView
+            android:id="@+id/ac_myStore_mcv_storeImg"
             android:layout_width="@dimen/dp_70"
             android:layout_height="@dimen/dp_70"
             android:layout_gravity="center_horizontal"
@@ -23,6 +24,7 @@
             android:layout_marginTop="@dimen/dp_10"/>
 
         <TextView
+            android:id="@+id/ac_myStore_tv_storeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="闭眼看世界"
@@ -32,6 +34,7 @@
             android:layout_marginTop="@dimen/dp_10"/>
 
         <TextView
+            android:id="@+id/ac_myStore_tv_reputation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="信誉分：15312"
