--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40">
         <TextView
+            android:id="@+id/item_orderList_tv_storeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="朝花夕拾"
@@ -19,6 +20,7 @@
             android:layout_marginLeft="@dimen/dp_12"/>
 
         <TextView
+            android:id="@+id/item_orderList_tv_orderState"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="待支付"
@@ -39,33 +41,35 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_100">
         <ImageView
-            android:id="@+id/item_order_list_pic"
+            android:id="@+id/item_orderList_iv_goodsImg"
             android:layout_width="@dimen/dp_80"
             android:layout_height="@dimen/dp_80"
             android:src="@mipmap/ic_launcher"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp_12"/>
         <TextView
-            android:id="@+id/item_order_list_tv_title"
+            android:id="@+id/item_orderList_tv_goodsName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="韩国control眼部精华打底液隔离打底保湿水正品代购"
-            android:layout_toRightOf="@id/item_order_list_pic"
+            android:layout_toRightOf="@id/item_orderList_tv_goodsImg"
             android:layout_marginTop="@dimen/dp_12"
             android:layout_marginRight="@dimen/dp_13"
             android:layout_marginLeft="@dimen/dp_11"
             android:maxLines="2"/>
             <TextView
+                android:id="@+id/item_orderList_tv_goodsPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="￥1560"
                 android:textSize="@dimen/sp_14"
                 android:textColor="@color/text6"
-                android:layout_alignLeft="@id/item_order_list_tv_title"
-                android:layout_below="@id/item_order_list_tv_title"
+                android:layout_alignLeft="@id/item_orderList_tv_goodsName"
+                android:layout_below="@id/item_orderList_tv_goodsName"
                 android:layout_marginTop="@dimen/dp_13"/>
 
         <TextView
+            android:id="@+id/item_orderList_tv_goodsNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="×1"
@@ -73,7 +77,7 @@
             android:textColor="@color/text6"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/dp_12"
-            android:layout_below="@id/item_order_list_tv_title"
+            android:layout_below="@id/item_orderList_tv_goodsName"
             android:layout_marginTop="@dimen/dp_13"/>
 
         <View
@@ -87,7 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/item_order_list_tv_price"
+            android:id="@+id/item_orderList_tv_orderPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥1560"
@@ -101,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="共一件商品，总金额"
-            android:layout_toLeftOf="@id/item_order_list_tv_price"
+            android:layout_toLeftOf="@id/item_orderList_tv_orderPrice"
             android:layout_marginTop="@dimen/dp_5"
             android:textSize="@dimen/sp_14"
             android:textColor="@color/text3"/>
@@ -111,11 +115,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_below="@id/item_order_list_tv_price"
+            android:layout_below="@id/item_orderList_tv_orderPrice"
             android:layout_marginRight="@dimen/dp_12">
 
             <Button
-                android:id="@+id/item_order_list_btn_cancle"
+                android:id="@+id/item_orderList_btn_cancel"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
                 android:layout_marginRight="@dimen/dp_12"
@@ -125,16 +129,16 @@
                 android:textSize="@dimen/sp_14"/>
 
             <Button
-                android:id="@+id/item_order_list_btn_delete"
+                android:id="@+id/item_orderList_btn_delete"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
                 android:layout_marginRight="@dimen/dp_12"
                 android:background="@drawable/stroke_zise_5"
                 android:text="删除订单"
                 android:textColor="@color/text6"
-                android:textSize="@dimen/sp_14"/>
+                android:textSize="@dimen/sp_14" />
             <Button
-                android:id="@+id/item_order_list_btn_cuidan"
+                android:id="@+id/item_orderList_btn_cuidan"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
                 android:background="@drawable/stroke_theme_5"
@@ -143,13 +147,58 @@
                 android:textColor="@color/app_theme"
                 android:textSize="@dimen/sp_14"/>
             <Button
-                android:id="@+id/item_order_list_btn_pay"
+                android:id="@+id/item_orderList_btn_pay"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
                 android:background="@drawable/stroke_theme_5"
                 android:text="去支付"
                 android:textColor="@color/app_theme"
-                android:textSize="@dimen/sp_14"/>
+                android:textSize="@dimen/sp_14" />
+            <Button
+                android:id="@+id/item_orderList_btn_query"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_zise_5"
+                android:text="查询物流"
+                android:textColor="@color/app_theme"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/item_orderList_btn_confirm"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_theme_5"
+                android:text="确认收货"
+                android:textColor="@color/app_theme"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/item_orderList_btn_again"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_theme_5"
+                android:text="再来一单"
+                android:textColor="@color/app_theme"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/item_orderList_btn_comment"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_zise_5"
+                android:text="评价"
+                android:textColor="@color/app_theme"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
+            <Button
+                android:id="@+id/item_orderList_btn_goodsReturn"
+                android:layout_width="@dimen/dp_70"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_zise_5"
+                android:text="退货"
+                android:textColor="@color/app_theme"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone"/>
         </LinearLayout>
     </RelativeLayout>
 
