--- a/app/src/main/res/layout/item_store_goods_bill.xml
+++ b/app/src/main/res/layout/item_store_goods_bill.xml
@@ -42,6 +42,7 @@
             android:layout_marginTop="@dimen/dp_10"/>
 
         <TextView
+            android:id="@+id/item_store_goods_bill_tv_goodsNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="×1"
@@ -64,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_8">
         <TextView
+            android:id="@+id/item_store_goods_bill_tv_orderSn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="订单号：544335535563"
@@ -95,6 +97,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/item_store_goods_bill_tv_orderTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="下单日期：2019年5月30日"
@@ -104,6 +107,7 @@
             android:layout_centerVertical="true"/>
 
         <TextView
+            android:id="@+id/item_store_goods_bill_tv_send"
             android:layout_width="@dimen/dp_50"
             android:layout_height="@dimen/dp_16"
             android:text="发货"
@@ -114,7 +118,19 @@
             android:background="@color/app_theme"
             android:textSize="@dimen/sp_14"
             android:layout_centerVertical="true"/>
-
+        <TextView
+            android:id="@+id/item_store_goods_bill_tv_drawaback"
+            android:layout_width="@dimen/dp_50"
+            android:layout_height="@dimen/dp_16"
+            android:text="退款"
+            android:gravity="center"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/dp_12"
+            android:textColor="@android:color/white"
+            android:background="@color/app_theme"
+            android:textSize="@dimen/sp_14"
+            android:layout_centerVertical="true"
+            android:visibility="gone"/>
     </RelativeLayout>
 
     <View
