--- a/app/src/main/res/layout/activity_confirm_myorder.xml
+++ b/app/src/main/res/layout/activity_confirm_myorder.xml
@@ -54,7 +54,7 @@
                     android:layout_marginLeft="@dimen/dp_12"/>
 
                 <TextView
-                    android:id="@+id/at_confirm_order_tv_address"
+                    android:id="@+id/at_confirm_myorder_tv_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -78,7 +78,7 @@
                     android:layout_marginLeft="@dimen/dp_12"/>
 
                 <TextView
-                    android:id="@+id/at_confirm_order_tv_store_name"
+                    android:id="@+id/at_confirm_myorder_tv_storeName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -95,9 +95,9 @@
                 android:layout_marginRight="@dimen/dp_12"></View>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_125">
+                android:layout_height="@dimen/dp_80">
                 <ImageView
-                    android:id="@+id/at_confirm_order_iv_pic"
+                    android:id="@+id/at_confirm_myorder_iv_goodsImg"
                     android:layout_width="@dimen/dp_80"
                     android:layout_height="@dimen/dp_80"
                     android:layout_marginTop="@dimen/dp_5"
@@ -105,11 +105,11 @@
                     android:src="@mipmap/ic_launcher"/>
 
                 <TextView
-                    android:id="@+id/at_confirm_order_tv_title"
+                    android:id="@+id/at_confirm_myorder_tv_goodsName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:layout_toRightOf="@id/at_confirm_order_iv_pic"
+                    android:layout_toRightOf="@id/at_confirm_myorder_iv_goodsImg"
                     android:layout_marginLeft="@dimen/dp_10"
                     android:layout_marginRight="@dimen/dp_23"
                     android:textSize="@dimen/sp_15"
@@ -118,21 +118,11 @@
                     android:layout_marginTop="@dimen/dp_15"/>
 
                 <TextView
-                    android:id="@+id/at_confirm_order_tv_size"
+                    android:id="@+id/at_confirm_myorder_tv_goodsPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/at_confirm_order_tv_title"
-                    android:layout_below="@id/at_confirm_order_tv_title"
-                    android:textSize="@dimen/sp_13"
-                    android:textColor="@color/text6"
-                    android:text="规格：速度 500/g"/>
-
-                <TextView
-                    android:id="@+id/at_confirm_order_tv_goods_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/at_confirm_order_tv_size"
-                    android:layout_below="@id/at_confirm_order_tv_size"
+                    android:layout_alignLeft="@id/at_confirm_myorder_tv_goodsName"
+                    android:layout_below="@id/at_confirm_myorder_tv_goodsName"
                     android:textSize="@dimen/sp_13"
                     android:textColor="@color/app_theme"
                     android:layout_marginTop="@dimen/dp_5"
@@ -144,53 +134,11 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/dp_12"
-                    android:layout_below="@id/at_confirm_order_tv_size"
+                    android:layout_below="@id/at_confirm_myorder_tv_goodsName"
                     android:textSize="@dimen/sp_13"
                     android:textColor="@color/text9"
                     android:layout_marginTop="@dimen/dp_5"
                     android:text="X1"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/at_confirm_order_iv_pic"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:text="选择提货方式"
-                    android:layout_marginTop="@dimen/dp_12"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <LinearLayout
-                    android:layout_width="@dimen/dp_85"
-                    android:layout_height="@dimen/dp_21"
-                    android:orientation="horizontal"
-                    android:layout_below="@id/at_confirm_order_iv_pic"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:layout_marginRight="@dimen/dp_12"
-                    android:padding="@dimen/dp_2"
-                    android:background="@drawable/stroke_app_theme">
-
-                    <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@android:color/white"
-                        android:text="自提"
-                        android:textColor="@color/text3"
-                        android:textSize="@dimen/sp_13"/>
-
-                    <Button
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@color/app_theme"
-                        android:textSize="@dimen/sp_13"
-                        android:textColor="@android:color/white"
-                        android:text="配送"/>
-
-                </LinearLayout>
-
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
@@ -221,14 +169,13 @@
                     android:textColor="@color/app_theme"/>
             </RelativeLayout>
             <RelativeLayout
-                android:id="@+id/at_confirm_order_rl_ziti"
                 android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="自提商家"
+                    android:text="运费"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dp_12"
                     android:textColor="@color/text3"
@@ -243,13 +190,13 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/dp_12"/>
                 <TextView
-                    android:id="@+id/at_confirm_order_tv_to_store"
+                    android:id="@+id/at_confirm_myorder_tv_ship"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/at_confirm_order_iv_go"
                     android:layout_marginRight="@dimen/dp_6"
-                    android:text="xxx旗舰店"
+                    android:text="￥10.00"
                     android:textSize="@dimen/sp_14"
                     android:textColor="@color/text6"/>
             </RelativeLayout>
@@ -263,7 +210,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40">
                 <TextView
-                    android:id="@+id/at_confirm_order_tv_price"
+                    android:id="@+id/at_confirm_myorder_tv_orderPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="￥625.00"
@@ -276,51 +223,17 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@id/at_confirm_order_tv_price"
+                    android:layout_toLeftOf="@id/at_confirm_myorder_tv_orderPrice"
                     android:textSize="@dimen/sp_14"
                     android:textColor="@color/text3"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/dp_6"
                     android:text="共一件商品  总计："/>
             </RelativeLayout>
-            <RelativeLayout
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_30"
-                android:background="#d4f1ee">
-                <ImageView
-                    android:id="@+id/iv_pop_lingdang"
-                    android:layout_width="@dimen/dp_22"
-                    android:layout_height="@dimen/dp_22"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:src="@drawable/pop_goods_detail_lingdang"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="成为农品街代言人此单立省403元"
-                    android:textColor="@color/app_theme"
-                    android:layout_toRightOf="@id/iv_pop_lingdang"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_8"/>
-
-                <ImageView
-                    android:id="@+id/iv_pop_look"
-                    android:layout_width="@dimen/dp_7"
-                    android:layout_height="@dimen/dp_12"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/dp_9"
-                    android:src="@drawable/pop_goods_detail_look"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="立即查看"
-                    android:textColor="@color/app_theme"
-                    android:textSize="@dimen/sp_13"
-                    android:layout_toLeftOf="@id/iv_pop_look"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/dp_6"/>
-            </RelativeLayout>
+                android:layout_height="@dimen/dp_10"
+                android:background="@color/background"></View>
             <RelativeLayout
                 android:id="@+id/at_confirm_order_rl_hongbao"
                 android:visibility="gone"
@@ -393,6 +306,7 @@
                     android:layout_marginLeft="@dimen/dp_13"/>
 
                 <ImageView
+                    android:id="@+id/ac_confirm_myorder_payType1"
                     android:layout_width="@dimen/dp_18"
                     android:layout_height="@dimen/dp_18"
                     android:layout_centerVertical="true"
@@ -421,6 +335,7 @@
                     android:layout_marginLeft="@dimen/dp_13"/>
 
                 <ImageView
+                    android:id="@+id/ac_confirm_myorder_payType2"
                     android:layout_width="@dimen/dp_18"
                     android:layout_height="@dimen/dp_18"
                     android:layout_centerVertical="true"
@@ -449,6 +364,7 @@
                     android:layout_marginLeft="@dimen/dp_13"/>
 
                 <ImageView
+                    android:id="@+id/ac_confirm_myorder_payType3"
                     android:layout_width="@dimen/dp_18"
                     android:layout_height="@dimen/dp_18"
                     android:layout_centerVertical="true"
@@ -462,17 +378,6 @@
                 android:background="@color/background"
                 android:layout_marginLeft="@dimen/dp_12"
                 android:layout_marginRight="@dimen/dp_12"></View>
-            <EditText
-                android:id="@+id/ac_confirmOrder_et_remark"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_12"
-                android:layout_marginRight="@dimen/dp_12"
-                android:background="@drawable/gray_conner"
-                android:hint="买家留言200字以内（选填）"
-                android:layout_marginTop="@dimen/dp_10"
-                android:textSize="@dimen/sp_14"
-                android:padding="@dimen/dp_13"/>
         </LinearLayout>
     </ScrollView>
     
@@ -491,6 +396,7 @@
             android:textSize="@dimen/sp_14"
             android:layout_marginLeft="@dimen/dp_89"/>
         <TextView
+            android:id="@+id/at_confirm_myorder_tv_orderPrice1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
