--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -21,22 +21,28 @@
                 android:layout_height="@dimen/dp_171"
                 android:background="@drawable/mine_title_gb">
 
-                <com.zthx.npj.view.MyCircleView
-                    android:id="@+id/fg_mine_iv_head_pic"
-                    android:layout_width="@dimen/dp_60"
-                    android:layout_height="@dimen/dp_60"
-                    android:layout_marginLeft="@dimen/dp_20"
-                    android:layout_marginTop="@dimen/dp_18"
-                    android:src="@mipmap/ic_launcher"/>
+                <LinearLayout
+                    android:id="@+id/fg_mine_ll"
+                    android:layout_width="@dimen/dp_100"
+                    android:layout_height="@dimen/dp_120"
+                    android:orientation="vertical">
+                    <com.zthx.npj.view.MyCircleView
+                        android:id="@+id/fg_mine_iv_head_pic"
+                        android:layout_width="@dimen/dp_60"
+                        android:layout_height="@dimen/dp_60"
+                        android:layout_marginLeft="@dimen/dp_20"
+                        android:layout_marginTop="@dimen/dp_18"
+                        android:src="@mipmap/ic_launcher"/>
 
-                <ImageView
-                    android:id="@+id/fg_mine_iv_levelimg"
-                    android:layout_width="@dimen/dp_80"
-                    android:layout_height="@dimen/dp_23"
-                    android:layout_below="@id/fg_mine_iv_head_pic"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:layout_marginTop="@dimen/dp_5"
-                    android:src="@drawable/mine_gold_people"/>
+                    <ImageView
+                        android:id="@+id/fg_mine_iv_levelimg"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="@dimen/dp_23"
+                        android:layout_below="@id/fg_mine_iv_head_pic"
+                        android:layout_marginLeft="@dimen/dp_10"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:src="@drawable/mine_gold_people"/>
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/fg_mine_tv_name"
@@ -45,7 +51,7 @@
                     android:text="黄吵吵"
                     android:textSize="@dimen/sp_16"
                     android:textColor="@android:color/white"
-                    android:layout_toRightOf="@id/fg_mine_iv_head_pic"
+                    android:layout_toRightOf="@id/fg_mine_ll"
                     android:layout_marginLeft="@dimen/dp_15"
                     android:layout_marginTop="@dimen/dp_15"/>
 
@@ -56,7 +62,7 @@
                     android:text="155****2228"
                     android:textSize="@dimen/sp_13"
                     android:textColor="@android:color/white"
-                    android:layout_toRightOf="@id/fg_mine_iv_head_pic"
+                    android:layout_toRightOf="@id/fg_mine_ll"
                     android:layout_below="@id/fg_mine_tv_name"
                     android:layout_marginLeft="@dimen/dp_15"
                     android:layout_marginTop="@dimen/dp_6"/>
@@ -68,7 +74,7 @@
                     android:text="天生我材必有用"
                     android:textSize="@dimen/sp_13"
                     android:textColor="@android:color/white"
-                    android:layout_toRightOf="@id/fg_mine_iv_head_pic"
+                    android:layout_toRightOf="@id/fg_mine_ll"
                     android:layout_below="@id/fg_mine_tv_tel"
                     android:layout_marginLeft="@dimen/dp_15"
                     android:layout_marginTop="@dimen/dp_4"/>
