--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -5,7 +5,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@android:color/white">
-    
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/line"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40">
@@ -158,15 +161,17 @@
                 android:id="@+id/item_orderList_btn_query"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
                 android:background="@drawable/stroke_zise_5"
                 android:text="查询物流"
-                android:textColor="@color/app_theme"
+                android:textColor="@color/text6"
                 android:textSize="@dimen/sp_14"
                 android:visibility="gone"/>
             <Button
                 android:id="@+id/item_orderList_btn_confirm"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
                 android:background="@drawable/stroke_theme_5"
                 android:text="确认收货"
                 android:textColor="@color/app_theme"
@@ -176,6 +181,7 @@
                 android:id="@+id/item_orderList_btn_again"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
                 android:background="@drawable/stroke_theme_5"
                 android:text="再来一单"
                 android:textColor="@color/app_theme"
@@ -185,21 +191,22 @@
                 android:id="@+id/item_orderList_btn_comment"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
                 android:background="@drawable/stroke_zise_5"
                 android:text="评价"
-                android:textColor="@color/app_theme"
+                android:textColor="@color/text6"
                 android:textSize="@dimen/sp_14"
                 android:visibility="gone"/>
             <Button
                 android:id="@+id/item_orderList_btn_goodsReturn"
                 android:layout_width="@dimen/dp_70"
                 android:layout_height="@dimen/dp_20"
+                android:layout_marginRight="@dimen/dp_12"
                 android:background="@drawable/stroke_zise_5"
                 android:text="退货"
-                android:textColor="@color/app_theme"
+                android:textColor="@color/text6"
                 android:textSize="@dimen/sp_14"
                 android:visibility="gone"/>
         </LinearLayout>
     </RelativeLayout>
-
 </LinearLayout>
