--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,10 @@
         <!--模糊-->
     </style>
 
+
+    <style name="roomRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/rattingbar_full</item>
+        <item name="android:minHeight">@dimen/dp_15</item>
+        <item name="android:maxHeight">@dimen/dp_15</item>
+    </style>
 </resources>
