--- a/app/src/main/res/layout/activity_order_applyrefund.xml
+++ b/app/src/main/res/layout/activity_order_applyrefund.xml
@@ -40,7 +40,7 @@
             android:textColor="@color/text6"
             android:text="毒贩夫妇付付付付付付付付付付付付付付付付付付付付过"
             android:layout_marginTop="@dimen/dp_15"/>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
@@ -53,17 +53,18 @@
                 android:textSize="@dimen/sp_13"
                 android:textColor="@color/text9"
                 android:layout_marginTop="@dimen/dp_5"
-                android:text="化妆品净含量：520ml"/>
+                android:text="￥ 66"/>
             <TextView
                 android:id="@+id/at_order_applyRefund_tv_goodsNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_100"
+                android:layout_marginRight="@dimen/dp_20"
+                android:layout_alignParentRight="true"
                 android:textSize="@dimen/sp_13"
                 android:layout_marginTop="@dimen/dp_5"
                 android:textColor="@color/text9"
                 android:text="x1"/>
-        </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
@@ -72,7 +73,6 @@
         android:layout_marginLeft="@dimen/dp_12"
         android:layout_marginRight="@dimen/dp_12"/>
     <RelativeLayout
-        android:id="@+id/at_confirm_order_rl_ziti"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40">
@@ -94,6 +94,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/dp_12"/>
         <TextView
+            android:id="@+id/at_order_applyRefund_tv_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -131,6 +132,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/dp_12"/>
         <TextView
+            android:id="@+id/at_order_applyRefund_tv_reason"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_13"
@@ -156,6 +158,7 @@
             android:textSize="@dimen/sp_14"
             android:text="退款金额"/>
         <TextView
+            android:id="@+id/at_order_applyRefund_tv_orderPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_20"
@@ -169,6 +172,7 @@
         android:background="@color/line"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/at_order_applyRefund_tv_ship"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_12"
@@ -187,7 +191,7 @@
             android:layout_marginTop="@dimen/dp_14"
             android:text="退款说明："/>
         <EditText
-            android:id="@+id/ac_order_applyRefund_reason"
+            android:id="@+id/ac_order_applyRefund_et_reason"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_14"
@@ -210,7 +214,7 @@
             android:text="上传凭证"
             android:layout_margin="@dimen/dp_12"/>
         <ImageView
-            android:id="@+id/ac_order_applyRefund_img"
+            android:id="@+id/ac_order_applyRefund_iv_img"
             android:layout_width="@dimen/dp_70"
             android:layout_height="@dimen/dp_70"
             android:layout_marginLeft="@dimen/dp_12"
@@ -218,7 +222,7 @@
     </LinearLayout>
     </LinearLayout>
     <Button
-        android:id="@+id/ac_order_applyRefund_confirm"
+        android:id="@+id/ac_order_applyRefund_btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
         android:layout_alignParentBottom="true"
