--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:clipChildren="false"
     tools:context=".ui.MainActivity">
-
+    <include layout="@layout/title"/>
     <FrameLayout
         android:id="@+id/lay_frg_main"
         android:layout_width="match_parent"
@@ -236,7 +236,7 @@
             <RadioButton
                 android:layout_marginTop="@dimen/dp_30"
                 android:layout_width="@dimen/dp_0"
-                android:layout_height="@dimen/dp_40"
+                android:layout_height="@dimen/dp_50"
                 android:layout_weight="1"
                 android:button="@null"
                 android:gravity="center"
@@ -248,7 +248,7 @@
             <RadioButton
                 android:layout_marginTop="@dimen/dp_30"
                 android:layout_width="@dimen/dp_0"
-                android:layout_height="@dimen/dp_40"
+                android:layout_height="@dimen/dp_50"
                 android:layout_weight="1"
                 android:button="@null"
                 android:gravity="center"
@@ -282,7 +282,7 @@
             <RadioButton
                 android:layout_marginTop="@dimen/dp_30"
                 android:layout_width="@dimen/dp_0"
-                android:layout_height="@dimen/dp_40"
+                android:layout_height="@dimen/dp_50"
                 android:layout_weight="1"
                 android:button="@null"
                 android:gravity="center"
@@ -293,7 +293,7 @@
             <RadioButton
                 android:layout_marginTop="@dimen/dp_30"
                 android:layout_width="@dimen/dp_0"
-                android:layout_height="@dimen/dp_40"
+                android:layout_height="@dimen/dp_50"
                 android:layout_weight="1"
                 android:button="@null"
                 android:gravity="center"
