--- a/app/src/main/res/layout/activity_cell_phone_login.xml
+++ b/app/src/main/res/layout/activity_cell_phone_login.xml
@@ -42,6 +42,7 @@
             android:layout_marginTop="@dimen/dp_10"/>
 
         <TextView
+            android:id="@+id/at_cellphone_login_tv_hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="请绑定您的手机号，绑定后可直接微信登录"
