--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -230,6 +230,7 @@
         android:layout_height="@dimen/dp_80"
         android:layout_alignParentBottom="true">
         <RadioGroup
+            android:id="@+id/ac_main_rg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
@@ -276,7 +277,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:paddingBottom="2dp"
-                    android:textSize="@dimen/sp_10"
+                    android:textSize="@dimen/sp_14"
                     android:text="庄园" />
             </LinearLayout>
             <RadioButton
