--- a/app/src/main/res/layout/activity_my_wallet.xml
+++ b/app/src/main/res/layout/activity_my_wallet.xml
@@ -46,6 +46,7 @@
                 android:layout_marginRight="@dimen/dp_12"
                 android:layout_marginTop="@dimen/dp_13"/>
             <TextView
+                android:id="@+id/at_myWallet_tv_mx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="明细"
@@ -58,6 +59,7 @@
 
 
         <RelativeLayout
+            android:id="@+id/ac_myWallet_rl_inManage"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_40"
             android:layout_marginTop="@dimen/dp_15"
@@ -89,6 +91,7 @@
                 android:layout_marginRight="@dimen/dp_10"/>
         </RelativeLayout>
         <RelativeLayout
+            android:id="@+id/ac_myallet_rl_bankCard"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_40"
             android:layout_marginTop="@dimen/dp_10"
