--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -18,7 +18,7 @@
             <RelativeLayout
                 android:id="@+id/rl_title"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_171"
+                android:layout_height="@dimen/dp_190"
                 android:background="@drawable/mine_title_gb">
 
                 <LinearLayout
@@ -109,7 +109,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_60"
+                    android:layout_height="@dimen/dp_80"
                     android:orientation="horizontal"
                     android:layout_marginTop="@dimen/dp_131"
                     android:background="@drawable/white_conner"
@@ -188,8 +188,9 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_70"
+                android:layout_height="@dimen/dp_50"
                 android:layout_below="@id/rl_title"
+                android:layout_marginTop="@dimen/dp_10"
                 android:background="@android:color/white">
 
                 <TextView
@@ -223,12 +224,10 @@
                     android:layout_marginRight="@dimen/dp_6"/>
 
             </RelativeLayout>
-            <!--<view-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="@dimen/dp_1"-->
-                <!--android:background="@color/background"-->
-                <!--&gt;</view>-->
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:background="@color/line"/>
             <LinearLayout
                 android:background="@android:color/white"
                 android:layout_width="match_parent"
@@ -421,6 +420,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/fg_mine_ll_my_offlinestore"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
