--- a/app/src/main/res/layout/item_local_spokesman.xml
+++ b/app/src/main/res/layout/item_local_spokesman.xml
@@ -3,15 +3,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_80">
-    
-    <com.zthx.npj.view.MyCircleView
-        android:id="@+id/item_local_spokesman_head_pic"
-        android:layout_width="@dimen/dp_60"
-        android:layout_height="@dimen/dp_60"
-        android:src="@mipmap/ic_launcher"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/dp_12"/>
-
+    <LinearLayout
+        android:id="@+id/item_local_spokesman_ll"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80">
+        <com.zthx.npj.view.MyCircleView
+            android:id="@+id/item_local_spokesman_head_pic"
+            android:layout_width="@dimen/dp_60"
+            android:layout_height="@dimen/dp_60"
+            android:src="@mipmap/ic_launcher"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/dp_12"/>
+    </LinearLayout>
     <TextView
         android:id="@+id/item_local_spokesman_tv_name"
         android:layout_width="wrap_content"
@@ -19,7 +22,7 @@
         android:text="张宇"
         android:textColor="@color/text3"
         android:textSize="@dimen/sp_15"
-        android:layout_toRightOf="@id/item_local_spokesman_head_pic"
+        android:layout_toRightOf="@id/item_local_spokesman_ll"
         android:layout_marginTop="@dimen/dp_13"
         android:layout_marginLeft="@dimen/dp_10"/>
 
@@ -47,7 +50,7 @@
         android:layout_alignTop="@id/item_local_spokesman_tv_name"
         android:layout_marginRight="@dimen/dp_12"
         android:layout_marginTop="@dimen/dp_1"/>
-    
+
     <Button
         android:layout_width="@dimen/dp_45"
         android:layout_height="@dimen/dp_20"
