--- a/app/src/main/res/layout/popupwindow_store_goods_bill.xml
+++ b/app/src/main/res/layout/popupwindow_store_goods_bill.xml
@@ -33,17 +33,16 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/dp_10"
             android:layout_centerVertical="true"/>
-
     </RelativeLayout>
 
-    <EditText
+    <Spinner
+        android:id="@+id/pw_storeGoods_s_expressName"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_34"
         android:background="@drawable/gray_conner_2"
         android:layout_marginRight="@dimen/dp_24"
         android:layout_marginLeft="@dimen/dp_24"
         android:layout_marginTop="@dimen/dp_40"
-        android:hint="请填写快递名称"
         android:paddingLeft="@dimen/dp_5"
         android:textSize="@dimen/sp_15"
         android:textColorHint="@color/text6"/>
