--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -14,28 +14,11 @@
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
-           <RelativeLayout
+           <include layout="@layout/title"/>
+           <View
                android:layout_width="match_parent"
-               android:layout_height="@dimen/dp_50"
-               android:background="@android:color/white">
-
-               <ImageView
-                   android:layout_width="@dimen/dp_22"
-                   android:layout_height="@dimen/dp_22"
-                   android:layout_centerVertical="true"
-                   android:layout_marginLeft="@dimen/dp_6"
-                   android:src="@drawable/back"/>
-
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="商家详情"
-                   android:layout_centerInParent="true"
-                   android:textSize="@dimen/sp_18"
-                   android:textColor="@color/text3"
-                   />
-           </RelativeLayout>
-
+               android:layout_height="@dimen/dp_1"
+               android:background="@color/line"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_170"
