--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -38,238 +38,11 @@
             android:layout_height="@dimen/dp_1"
             android:background="@color/background"
             android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_12"></View>
-        
-        <LinearLayout
+            android:layout_marginRight="@dimen/dp_12"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ac_help_rv_problem1"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:id="@+id/at_help_ll_question1"
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-                
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_20"/>
-            </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_20"/>
-            </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_20"/>
-            </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_20"/>
-            </LinearLayout>
-
-        </LinearLayout>
-
+            android:layout_height="@dimen/dp_170"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_40"
@@ -283,7 +56,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="常见问题"
+                android:text="热门问题"
                 android:textSize="@dimen/sp_16"
                 android:textColor="@color/app_theme"
                 android:layout_marginLeft="@dimen/dp_10"/>
@@ -293,180 +66,11 @@
             android:layout_height="@dimen/dp_1"
             android:background="@color/background"
             android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_12"></View>
-
-        <LinearLayout
+            android:layout_marginRight="@dimen/dp_12"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ac_help_rv_problem2"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_20"/>
-            </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_20"/>
-            </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:orientation="horizontal">
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"
-                    android:layout_marginLeft="@dimen/dp_12"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="@dimen/dp_0"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/dp_27"
-                    android:layout_height="@dimen/dp_27"
-                    android:src="@drawable/yuanlin"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="庄园相关问题"
-                    android:textColor="@color/text3"
-                    android:textSize="@dimen/sp_14"
-                    android:layout_marginLeft="@dimen/dp_10"/>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_8"
-                    android:layout_height="@dimen/dp_14"
-                    android:src="@drawable/mine_dingdan_go"
-                    android:layout_marginLeft="@dimen/dp_20"/>
-            </LinearLayout>
-
-        </LinearLayout>
-
+            android:layout_height="@dimen/dp_170"/>
     </LinearLayout>
 
     <LinearLayout
