--- a/app/src/main/res/layout/activity_my_collect.xml
+++ b/app/src/main/res/layout/activity_my_collect.xml
@@ -9,7 +9,10 @@
 
     <include
         layout="@layout/title"></include>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:background="@color/line"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
@@ -28,6 +31,7 @@
                android:orientation="horizontal">
 
                <TextView
+                   android:id="@+id/ac_myCollect_tv_goods"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
@@ -38,6 +42,7 @@
                    android:background="@color/app_theme"
                    android:gravity="center"/>
                <TextView
+                   android:id="@+id/ac_myStore_tv_stores"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
@@ -53,7 +58,6 @@
                android:id="@+id/at_my_collect_goods_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
-
            </android.support.v7.widget.RecyclerView>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/at_my_collect_store_rv"
@@ -80,7 +84,6 @@
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="@dimen/dp_10">
-
               </android.support.v7.widget.RecyclerView>
           </LinearLayout>
        </LinearLayout>
