--- a/app/src/main/res/layout/activity_want_buy_manager.xml
+++ b/app/src/main/res/layout/activity_want_buy_manager.xml
@@ -18,6 +18,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/ac_wantBuy_tv_wantBuy"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -28,6 +29,7 @@
             android:background="@color/app_theme"
             android:gravity="center"/>
         <TextView
+            android:id="@+id/ac_wantBuy_tv_baojia"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -54,6 +56,7 @@
             android:layout_marginRight="@dimen/dp_100"
             android:layout_marginTop="@dimen/dp_15">
             <TextView
+                android:id="@+id/ac_wantBuy_tv_issue"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -62,6 +65,7 @@
                 android:textSize="@dimen/sp_14"
                 android:textColor="@color/app_theme"/>
             <TextView
+                android:id="@+id/ac_wantBuy_tv_unIssue"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
