--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,32 +7,35 @@
     tools:context=".ui.fragment.DiscoverFragment"
     android:background="@color/background"
     android:orientation="vertical">
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/fg_discover_main_tab"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_30"
+        android:background="@android:color/white"/>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_50"
-        android:background="@android:color/white"
-        app:tabGravity="center"
-        app:tabIndicatorColor="@color/app_theme"
-        app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/app_theme"
-        app:tabTextColor="@android:color/black"/>
-    
-    <ImageView
-        android:id="@+id/fg_discover_iv_message"
-        android:layout_width="@dimen/dp_22"
-        android:layout_height="@dimen/dp_22"
-        android:src="@drawable/discover_message"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_15"/>
+        android:orientation="horizontal"
+        android:background="@android:color/white">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/fg_discover_main_tab"
+            android:layout_width="@dimen/dp_340"
+            android:layout_height="@dimen/dp_50"
+            android:background="@android:color/white"
+            app:tabGravity="center"
+            app:tabIndicatorColor="@color/app_theme"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/app_theme"
+            app:tabTextColor="@android:color/black"/>
+        <ImageView
+            android:id="@+id/fg_discover_iv_message"
+            android:layout_width="@dimen/dp_22"
+            android:layout_height="@dimen/dp_22"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/discover_message" />
+    </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/fg_discover_main_tab"/>
-
-
-</RelativeLayout>
+        android:layout_height="match_parent" />
+</LinearLayout>
