--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -6,12 +6,14 @@
     android:background="@color/background"
     android:orientation="vertical"
     tools:context=".ui.fragment.MineFragment">
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_30"
+        android:background="@color/app_theme"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_50"
         android:background="@color/app_theme">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
