--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -89,9 +89,7 @@
                     android:paddingRight="10dp"
                     android:paddingTop="5dp"
                     android:scaleType="centerCrop"
-                    android:visibility="gone"
-
-                    />
+                    android:visibility="gone"/>
 
 
                 <!--返回键-->
