--- a/app/src/main/res/layout/activity_sec_kill.xml
+++ b/app/src/main/res/layout/activity_sec_kill.xml
@@ -24,8 +24,7 @@
             android:text="限时秒杀"
             android:layout_centerInParent="true"
             android:textSize="@dimen/sp_18"
-            android:textColor="@color/text3"
-            />
+            android:textColor="@color/text3" />
     </RelativeLayout>
 
     <View
