--- a/app/src/main/res/layout/item_sec_kill_adpter.xml
+++ b/app/src/main/res/layout/item_sec_kill_adpter.xml
@@ -20,13 +20,26 @@
         android:layout_toRightOf="@id/item_sec_kill_iv_goods_pic"
         android:layout_marginLeft="@dimen/dp_10"
         android:layout_marginTop="@dimen/dp_10">
-        <TextView
-            android:id="@+id/item_sec_kill_tv_goods_leb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="绿色无污染除草剂"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text6"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/item_sec_kill_tv_goods_leb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="绿色无污染除草剂"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text6"/>
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/item_sec_kill_tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2019/3/12"
+                android:layout_marginRight="@dimen/dp_12"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/item_sec_kill_tv_title"
@@ -44,10 +57,19 @@
             android:layout_marginTop="@dimen/dp_8"
             app:nearOverText="即将售罄"
             app:overText="已售罄"/>
-
+        <TextView
+            android:id="@+id/item_sec_kill_tv_num"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_13"
+            android:textColor="@color/app_theme"
+            android:layout_marginTop="@dimen/dp_5"
+            android:text="秒杀份：120份"/>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/item_sec_kill_ll_l1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -73,8 +95,35 @@
             android:textSize="@dimen/sp_12"
             android:layout_marginLeft="@dimen/dp_30"/>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/item_sec_kill_ll_l2"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dp_18"
+        android:layout_toRightOf="@id/item_sec_kill_iv_goods_pic"
+        android:layout_marginLeft="@dimen/dp_10">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="距离开场时间："
+            android:textSize="@dimen/sp_12"
+            android:textColor="@color/text9" />
+
+        <TextView
+            android:id="@+id/item_sec_kill_tv_timeWill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="24时15分30秒"
+            android:textColor="@color/app_theme"
+            android:textSize="@dimen/sp_12"
+            android:layout_marginLeft="@dimen/dp_5"/>
+    </LinearLayout>
 
     <Button
+        android:id="@+id/item_sec_kill_btn_buy"
         android:layout_width="@dimen/dp_65"
         android:layout_height="@dimen/dp_20"
         android:layout_alignParentBottom="true"
