--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -7,6 +7,7 @@
         android:id="@+id/title">
 
         <ImageView
+            android:id="@+id/title_back"
             android:layout_width="@dimen/dp_22"
             android:layout_height="@dimen/dp_22"
             android:layout_centerVertical="true"
